--- a/index.html
+++ b/index.html
@@ -1,10 +1,120 @@
-<html>
-	<head>
-		<title>
-			Hello World
-		</title>
-	</head>
-	<body>
-		Write your code for the submission by editing this file
-	</body>
+<!DOCTYPE html>
+<html lang="en">
+<head>
+    <meta charset="UTF-8">
+    <meta http-equiv="X-UA-Compatible" content="IE=edge">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="app.css">
+    <title>COVID GUIDE</title>
+</head>
+<body>
+    <header>
+        <nav id="nav">
+            <ul id="navlist">
+            <li><a href="#Home">Home</a></li> 
+            <li><a href="#Tips">Tips</a></li> 
+            <li><a href="#Symptoms">Symptoms</a></li> 
+            <li><a href="#faq">FAQs</a></li> 
+            <li><a href="#YouTube">YouTube</a></li> 
+            </ul>
+        </nav>
+    </header>
+    <section id="Home">
+        
+        <h2>Confused about where to get the right information about COVID-19?</h2>
+        <h1>Don't worry, we got you!</h1>
+    </section>
+    <section id="Tips">
+        <h1>TIPS</h1>
+        <div id="tip1">
+            <img src="mask.png" alt="person wearing mask">
+            <h2>Wear mask</h2> 
+        </div>
+        <div id="tip2">
+            <h2>Wash hands</h2>
+            <img src="hands.png" alt="person washing hands">
+        </div>
+    </section>
+    <section id="Symptoms">
+        <h1>SYMPTOMS</h1>
+        <table id="table">
+            <thead>
+                <tr>
+                    <th>Symptom</th>
+                    <th>Severity</th>
+                    <th>Advice</th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr>
+                    <td>Fever</td>
+                    <td>Mild</td>
+                    <td>Drink plenty of fluids, particularly water.</td>
+                </tr>
+                <tr>
+                    <td>Cold</td>
+                    <td>Mild</td>
+                    <td>Drink plenty of fluids, particularly water.</td>
+                </tr>
+                <tr>
+                    <td>Cough</td>
+                    <td>Mild</td>
+                    <td>Drink plenty of fluids, particularly water.</td>
+                </tr>
+                <tr>
+                    <td>Tiredness</td>
+                    <td>Mild</td>
+                    <td>Drink plenty of fluids, particularly water.</td>
+                </tr>
+            </tbody>
+        </table>
+    </section>
+    <!-- <h1 id="faqh">FAQs</h1> -->
+    <section id="faq">
+        <h1 class="faqs">FAQs</h1>
+        <div class="flipcard" >
+            <div class="flipcardinner">
+                <div class="flipcardfront">
+                    <h1>What is COVID-19?</h1>
+                </div>
+                <div class="flipcardback">
+                    <p>COVID-19 is a disease caused by a virus called SARS-CoV-2. Most people with COVID-19 have mild symptoms, but some people can become severely ill. Although most people with COVID-19 get better within weeks of illness, some people experience post-COVID conditions. Post-COVID conditions are a wide range of new, returning, or ongoing health problems people can experience more than four weeks after first being infected with the virus that causes COVID-19. Older people and those who have certain underlying medical conditions are more likely to get severely ill from COVID-19. Vaccines against COVID-19 are safe and effective.</p>
+                </div>
+            </div>
+        </div>
+        <div class="flipcard" >
+            <div class="flipcardinner">
+                <div class="flipcardfront">
+                    <h1>Should I use soap and water or hand sanitizer to protect myself?</h1>
+                </div>
+                <div class="flipcardback">
+                    <p>Handwashing is one of the best ways to protect yourself and your family from getting sick. Wash your hands often with soap and water for at least 20 seconds, especially after blowing your nose, coughing, or sneezing; going to the bathroom; and before eating or preparing food. If soap and water are not readily available, use an alcohol-based hand sanitizer with at least 60% alcohol.</p>
+                </div>
+            </div>
+        </div>
+        <div class="flipcard" >
+            <div class="flipcardinner">
+                <div class="flipcardfront">
+                    <h1>What are the symptoms and complications that COVID-19 can cause?</h1>
+                </div>
+                <div class="flipcardback">
+                    <p>People with COVID-19 have reported a wide range of symptoms – from mild symptoms to severe illness. Symptoms may appear 2-14 days after exposure to the virus. If you have fever, cough, or other symptoms, you might have COVID-19.</p>
+                </div>
+            </div>
+        </div>   
+    </section>
+            <section id="YouTube">
+                <h1>YouTube</h1>
+                <iframe src="https://www.youtube.com/embed/videoseries?list=PL9S6xGsoqIBU2V6AZYGlJwZRAFJ3YDreb" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            </section>
+        <footer>
+            <h1>Made by Priyal Jain</h1>
+            <div>
+                <h2><a href="https://www.linkedin.com/in/priyal-jain-473504223/" target="_blank">Linkedin</a></h2>
+                <h2><a href="mailto:mt6210949@iitd.ac.in" target="_blank">Email</a></h2>
+                <h2><a href="https://github.com/priyallj05" target="_blank">Github</a></h2>
+                <h2><a href="https://www.instagram.com/priyalj05/" target="_blank">Instagram</a></h2>
+            </div>
+        </footer>
+</body>
 </html>
